WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46140
Crash when div with content set to image gets composited (Vimeo).
https://bugs.webkit.org/show_bug.cgi?id=46140
Summary
Crash when div with content set to image gets composited (Vimeo).
Simon Fraser (smfr)
Reported
2010-09-20 17:04:06 PDT
Loading
http://vimeo.com/m/#/14354661
crashes.
Attachments
Patch
(3.78 KB, patch)
2010-09-20 17:11 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-09-20 17:04:18 PDT
<
rdar://problem/8453215
>
Simon Fraser (smfr)
Comment 2
2010-09-20 17:11:38 PDT
Created
attachment 68162
[details]
Patch
Simon Fraser (smfr)
Comment 3
2010-09-20 17:43:47 PDT
http://trac.webkit.org/changeset/67899
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug